# euclid

./: .buildinfo  .gitignore  BACKGROUND.md  CHANGELOG.md  CHANGELOG.rst  GEMINI.md  JULES.md  README.rst  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.clerk/: geometor-euclid_docs.md  geometor-euclid_src.md  geometor-euclid_tree.txt
.doctrees/: about.doctree  changelog.doctree  connect.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  todos.doctree
_images/: graphviz-00fcebd14cf42e162aa598f7e0921dabd5403b80.png.map  graphviz-00fda0eb2f0ebdbf5b615717310202f2915f37a6.png.map  graphviz-01a618ac74d79e7ef8106cd4d0d91f1394b98509.png.map  graphviz-02d0f861b90f18a1fb33ae9ede676338405cc60e.png.map  graphviz-034603a44eaa4758c0495ebd8ab0566819f6a275.png.map  graphviz-034930900578f8f8078a2e68cb9396eeebd3f315.png.map  graphviz-035ec21b963f9862c5ed24af0cb03c11e2e57e3c.png.map  graphviz-03bd3a5e2433db79fd40de19746617898fc5fd2b.png.map  graphviz-045f4f7f5054e54e43bbd7c11f51504e1e3bfb85.png.map  graphviz-05d00c0055897f44d1bb73e772beeaa6744dd916.png.map  graphviz-05e9dc564ab1c0fc2d2c7e8fa36dd5c27e4dd391.png.map  graphviz-070ea391a9951f8e1ece9a80fee1cfed1a8f02e1.png.map  graphviz-076d0984756a2767af1dcacdaa7d2ce9cd611f42.png.map  graphviz-08091340f5063764f7c91dacae78e653d74362bd.png.map  graphviz-0848b3c98c8bc30897f1e8410ad50061ad09cec0.png.map  graphviz-085b326f4ee38d26bad1ddadc22897e39ff63f55.png.map  graphviz-08ea7a934ef88919d26c6d4b180cf000ada8d606.png.map  graphviz-098196ccf6aaa4efdf21c95c97977f7a0ead5972.png.map  graphviz-09f2d4cc535707ce6cda25d253df5cb1d9a0c160.png.map  graphviz-0a55c3ed91ce79a91b0e903c6627cdb4544caefd.png.map  graphviz-0bd720c891ae9117e1aa260442d7aa626d6c6677.png.map  graphviz-0e12b164e5e76a8ab3dfe01f7efecd4786e19ccd.png.map  graphviz-0e8865b498b86b6d0dcfbf2f0faad73e7df6683c.png.map  graphviz-0f20e1a39ba92352d3dfe970462e83a94081196a.png.map  graphviz-0f52fbcdfec35611478c1da55e85d3ee92d25f82.png.map  (+426 more)
_modules/: euclid.html  (+1 more)
(+4962 files in other folders)
