[project]
name = "geometor-euclid"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "creating semantic structure around the classic work"
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
euclid = "geometor.euclid.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.euclid.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/euclid"
"Repository" = "https://github.com/geometor/euclid"
"Issues" = "https://github.com/geometor/euclid/issues"