[project]
name = "geometor-euclid"
dynamic = ["version"]
authors = [
  { name="geometor", email="github@geometor.com" },
]
description = "A digital reconstruction of Euclid's Elements for dependency mapping and analysis."
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy",
    "matplotlib",
    "mplcursors",
    "rich",
    "networkx",
    "PyYAML",
]

[project.scripts]
euclid = "geometor.euclid.__main__:main"
heath_transform = "geometor.euclid.transform:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.euclid.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/euclid"
"Repository" = "https://github.com/geometor/euclid"
"Issues" = "https://github.com/geometor/euclid/issues"
